<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stat_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:textIsSelectable="true"
    tools:context=".ui.statistics.StatDetailFragment" >

    <fragment
        android:id="@+id/statMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow>

            <TextView
                android:layout_width="175dp"
                android:padding="3dip"
                android:text="@string/start"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvStart"
                android:layout_width="wrap_content"
                android:padding="3dip"
                android:text="value"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="175dp"
                android:padding="3dip"
                android:text="@string/end"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvEnd"
                android:layout_width="wrap_content"
                android:padding="3dip"
                android:text="value"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/time"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:padding="3dip"
                android:text="value"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/avarage_speed"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSpeed"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:padding="3dip"
                android:text="value"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/distance"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:padding="3dip"
                android:text="value"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/burned_calories"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvBurnedCalories"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:padding="3dip"
                android:text="value"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



