<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/primaryColor"
    app:cardCornerRadius="10dp"
    app:contentPadding="10dp"
    android:backgroundTint="#BF519657">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView
            android:id="@+id/tvSpeed"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/speed"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:padding="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSpeedValue"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:padding="2dp"
            app:layout_constraintStart_toEndOf="@+id/tvSpeed"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:padding="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSpeed" />

        <TextView
            android:id="@+id/tvTimeValue"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="2dp"
            android:text="00:00:00"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/tvTime"
            app:layout_constraintTop_toBottomOf="@+id/tvSpeedValue" />

        <TextView
            android:id="@+id/tvPosition"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="2dp"
            android:text="@string/position"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTime" />

        <TextView
            android:id="@+id/tvPositionValue"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="2dp"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/tvPosition"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeValue" />

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="2dp"
            android:text="@string/distance"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPosition" />

        <TextView
            android:id="@+id/tvDistanceValue"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="2dp"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/tvDistance"
            app:layout_constraintTop_toBottomOf="@+id/tvPositionValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>